--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background: #1c8ef9 !important;
+  background: #61e45f !important;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
